bdr.BDR.scala.error
Compilation error:
BDR:6: error: ';' expected but ',' found.
    if (msg == "L")  {left(),forward()}
                            ^